testsuite/poke.pkl/bconc-diag-1.pk
/* { dg-do compile } */

var a = 100
          ::: 3#B; /* { dg-error "expected integer" } */
